DB 커넥션의 Interface화

--- a/springbook/user/dao/.gitignore
+++ b/springbook/user/dao/.gitignore
@@ -2,3 +2,6 @@
 /NUserDao.class
 /DUserDao.class
 /SimpleConnectionMaker.class
+/ConnectionMaker.class
+/DConnectionMaker.class
+/NConnectionMaker.class
