--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,12 @@
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Program Files/MariaDB 10.1/mariadb-java-client-1.4.5.jar"/>
+	<classpathentry kind="lib" path="lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/spring-aop-4.2.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-beans-4.2.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-context-4.2.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-core-4.2.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-expression-4.2.6.RELEASE.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
