--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="lib/spring-context-4.2.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-core-4.2.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-expression-4.2.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-jdbc-3.1.1.RELEASE.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
