--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry kind="lib" path="lib/spring-core-4.2.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-expression-4.2.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-jdbc-3.1.1.RELEASE.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/spring-dao-2.0.6.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
