--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="lib/spring-jdbc-3.1.1.RELEASE.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/spring-dao-2.0.6.jar"/>
+	<classpathentry kind="lib" path="lib/spring-test-3.1.1.RELEASE.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
