DAO 전략 패턴 적용 1단계

--- a/springbook/user/dao/.gitignore
+++ b/springbook/user/dao/.gitignore
@@ -8,3 +8,6 @@
 /DaoFactory.class
 /CountingConnectionMaker.class
 /CountingDaoFactory.class
+/StatementStrategy.class
+/DeleteAllStatement.class
+/AddStatement.class
