UserDao를 인터페이스로 만들어 기능별로 사용할 수 있도록 변경(ex:jdbc, jpa, 하이버네이트..) 추가로 사용자 레벨 설정을 위해 Level enum 생성

--- a/springbook/user/dao/.gitignore
+++ b/springbook/user/dao/.gitignore
@@ -19,3 +19,6 @@
 /JdbcContext$2.class
 /UserDao$3.class
 /DuplicateUserIdException.class
+/UserDaoInterface.class
+/UserDaoJdbc.class
+/UserDaoJdbc$1.class
