--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="lib/spring-dao-2.0.6.jar"/>
 	<classpathentry kind="lib" path="lib/spring-test-3.1.1.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.39-bin.jar"/>
+	<classpathentry kind="lib" path="lib/spring-tx-4.2.6.RELEASE.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
