레벨 업그레이드 정책 인터페이스로 구현 특정 이벤트 기간에 구현 클래스가 갈아(?)끼워 사용할 수 있게. 이건 그냥 본인이 해본 거임.

--- a/springbook/user/service/.gitignore
+++ b/springbook/user/service/.gitignore
@@ -1,2 +1,5 @@
 /UserService.class
 /UserServiceTest.class
+/UserLevelUpgradePolicy.class
+/UserLevelUpgradePolicyNormal.class
+/UserLevelUpgradePolicySpecial.class
