트랜잭션 테스트

--- a/springbook/user/service/.gitignore
+++ b/springbook/user/service/.gitignore
@@ -3,3 +3,5 @@
 /UserLevelUpgradePolicy.class
 /UserLevelUpgradePolicyNormal.class
 /UserLevelUpgradePolicySpecial.class
+/UserServiceTest$TestUserService.class
+/UserServiceTest$TestUserServiceException.class
