--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,9 @@
 	<classpathentry kind="lib" path="lib/spring-test-3.1.1.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.39-bin.jar"/>
 	<classpathentry kind="lib" path="lib/spring-tx-4.2.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/mail-1.5.0-b01.jar"/>
+	<classpathentry kind="lib" path="lib/com.springsource.javax.activation-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/com.springsource.javax.mail-1.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/spring-context-support-4.3.0.RELEASE.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
