목 오브젝트를 이용한 테스트

--- a/springbook/user/service/.gitignore
+++ b/springbook/user/service/.gitignore
@@ -5,3 +5,5 @@
 /UserLevelUpgradePolicySpecial.class
 /UserServiceTest$TestUserService.class
 /UserServiceTest$TestUserServiceException.class
+/DummyMailSender.class
+/UserServiceTest$MockMailSender.class
