AOP 실습 UserService 인터페이스 도입 후 트랜잭션과 비즈니스 로직을 분리. 그 후 트랜잭션 클래스에서 비즈니스 로직을 구현한 오브젝트를 DI 받아 그 오브젝트에 기능을 위임한다.

--- a/springbook/user/service/.gitignore
+++ b/springbook/user/service/.gitignore
@@ -7,3 +7,5 @@
 /UserServiceTest$TestUserServiceException.class
 /DummyMailSender.class
 /UserServiceTest$MockMailSender.class
+/UserServiceImpl.class
+/UserServiceTx.class
