스프링 프록시 팩토리 빈을 트랜잭션 처리에 적용!

--- a/springbook/learningtest/jdk/proxy/.gitignore
+++ b/springbook/learningtest/jdk/proxy/.gitignore
@@ -3,3 +3,4 @@
 /DynamicProxyTest$Hello.class
 /DynamicProxyTest$HelloTarget.class
 /DynamicProxyTest$UppercaseAdvice.class
+/TransactionAdvice.class
