DefaultAdvisorAutoProxyCreator를 이용한 자동 프록시 생성 포인트컷에서 클래스 필터링 기능까지 추가한 후, 자동 프록시 생성기를 이용해 필요한 경우(빈 클래스가 프록시 선정대상일 때)에만 프록시를 만들어 원래의 빈 오브젝트와 바꿔지키한다!

--- a/springbook/learningtest/jdk/proxy/.gitignore
+++ b/springbook/learningtest/jdk/proxy/.gitignore
@@ -4,3 +4,5 @@
 /DynamicProxyTest$HelloTarget.class
 /DynamicProxyTest$UppercaseAdvice.class
 /TransactionAdvice.class
+/NameMatchClassMethodPointcut.class
+/NameMatchClassMethodPointcut$SimpleClassFilter.class
