--- a/springbook/user/service/.gitignore
+++ b/springbook/user/service/.gitignore
@@ -12,3 +12,10 @@
 /TransactionHandler.class
 /TxProxyFactoryBean.class
 /TransactionAdvice.class
+/UserServiceTest$1$1.class
+/UserServiceTest$1.class
+/UserServiceTest$1HelloToby.class
+/UserServiceTest$1HelloWorld.class
+/NameMatchClassMethodPointcut$SimpleClassFilter.class
+/NameMatchClassMethodPointcut.class
+/UserServiceTest$TestUserServiceImpl.class
