--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="lib" path="lib/com.springsource.javax.activation-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/com.springsource.javax.mail-1.4.1.jar"/>
 	<classpathentry kind="lib" path="lib/spring-context-support-4.3.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/com.springsource.org.aspectj.tools-1.6.6.RELEASE.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
