--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,7 @@
 	<classpathentry kind="lib" path="lib/com.springsource.javax.mail-1.4.1.jar"/>
 	<classpathentry kind="lib" path="lib/spring-context-support-4.3.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/com.springsource.org.aspectj.tools-1.6.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-core-2.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-api-2.6.1.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
