--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="lib" path="lib/com.springsource.org.aspectj.tools-1.6.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-core-2.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-api-2.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/ojdbc6.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
