XmlSqlService 관심사 분리 작업 별도의 인터페이스로 나눠서 만든다. sql 을 읽어오는 sqlReader sql을 저장하는 sqlRegistry

--- a/springbook/user/sqlservice/.gitignore
+++ b/springbook/user/sqlservice/.gitignore
@@ -2,3 +2,6 @@
 /SqlRetrievalFailureException.class
 /SimpleSqlService.class
 /XmlSqlService.class
+/SqlRegistry.class
+/SqlReader.class
+/SqlNotFoundException.class
