관심사 분리 후 독립적인 빈으로 만들기 이렇게 만들면 3개의 빈을 따로 등록해줘야 하는게 귀찮을 수도 있다. 이때 사용할 수 있는게 디폴트 의존관계를 설정해주는 것인데, 흥미로웠다. 책을 참조할것. 토비의 스프링 1권 p.594

--- a/springbook/user/sqlservice/.gitignore
+++ b/springbook/user/sqlservice/.gitignore
@@ -5,3 +5,6 @@
 /SqlRegistry.class
 /SqlReader.class
 /SqlNotFoundException.class
+/BaseSqlService.class
+/HashMapSqlRegistry.class
+/JaxbXmlSqlReader.class
