--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,6 @@
 	<classpathentry kind="lib" path="lib/log4j-core-2.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-api-2.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="lib/spring-oxm-4.3.0.RELEASE.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
