--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,6 @@
 	<classpathentry kind="lib" path="lib/log4j-api-2.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/ojdbc6.jar"/>
 	<classpathentry kind="lib" path="lib/spring-oxm-4.3.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/com.springsource.org.castor-1.2.0.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
