쿼리수정기능이 추가된 UpdatableSqlRegistry 추가 ConcurrentHashMap은 데이터 조작시 전체 데이터에 대해 락을 걸지 않고 조회는 락을 아예 사용하지 않으므로 이걸 이용한다. 하지만... 동시성 테스트는 하기가 어려우므로 일단은 그건 제외하고 테스트한다.

--- a/springbook/user/sqlservice/.gitignore
+++ b/springbook/user/sqlservice/.gitignore
@@ -10,3 +10,6 @@
 /JaxbXmlSqlReader.class
 /OxmSqlService.class
 /OxmSqlService$OxmSqlReader.class
+/UpdatableSqlRegistry.class
+/SqlUpdateFailureException.class
+/ConcurrentHashMapSqlRegistry.class
