--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="lib/ojdbc6.jar"/>
 	<classpathentry kind="lib" path="lib/spring-oxm-4.3.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/com.springsource.org.castor-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/com.springsource.org.hsqldb-1.8.0.9.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
