중첩 클래스 만들기 파일이 너무 많다! test 컨텍스트와 production 컨텍스트를 메인 컨텍스트의 이너 클래스로 만들어서 간결하게 만들자. 이때 중요한건 독립적으로 사용될 수 있게 스태틱으로 만들어야 한다는 점.

--- a/springbook/.gitignore
+++ b/springbook/.gitignore
@@ -3,3 +3,5 @@
 /TestAppContext.class
 /SqlServiceContext.class
 /ProductionAppContext.class
+/AppContext$ProductionAppContext.class
+/AppContext$TestAppContext.class
